--- a/Resources.qrc
+++ b/Resources.qrc
@@ -1,8 +1,8 @@
 <RCC>
     <qresource prefix="/new/prefix1">
-        <file>icons8-mask-60.png</file>
+        <file>resources/icons8-mask-60.png</file>
     </qresource>
     <qresource prefix="/new/prefix2">
-        <file>icons8-help-32.png</file>
+        <file>resources/icons8-help-32.png</file>
     </qresource>
 </RCC>
